Added Premake Support & Converted Graphics Engine into a submodule

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# Directories
+.vs/
+.idea/
+Binaries/
+
+# Files
+*.vcxproj
+*.vcxproj.user
+*.vcxproj.filters
+*.sln
+*.log
+Makefile
+
+# Exclude
+!Vendor/Binaries
+
 # Prerequisites
 *.d
 
